Fixing refaster